Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Sylpheo/skyflow">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/Sylpheo/skyflow.io">View on GitHub</a>
 
           <h1 id="project_title">Skyflow.io</h1>
           <h2 id="project_tagline">Connect Enterprise Clouds seemlessly</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Sylpheo/skyflow/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Sylpheo/skyflow/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/Sylpheo/skyflow.io/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Sylpheo/skyflow.io/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -31,30 +31,66 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-skyflow-pages" class="anchor" href="#welcome-to-skyflow-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Skyflow Pages.</h3>
+        <p>Enterprise-level companies use more and more Cloud services from multiple parties (Salesforce, SAP, Microsoft, IBM, HP, Oracle…) &amp; API from many SAAS providers. IoT and customer facing apps generate even more data, events and information flows.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub for Mac or GitHub for Windows, simply sync your repository and you’ll see the new branch.</p>
+<ul>
+<li>Classical integration systems don’t fit their needs anymore</li>
+<li>The connections between external events (web, forms, partners, clients, IoT) and internal “business” clouds are not structured</li>
+</ul>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a id="skyflowio-is-the-1-orchestra-conductor-for-all-enterprise-clouds" class="anchor" href="#skyflowio-is-the-1-orchestra-conductor-for-all-enterprise-clouds" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skyflow.io is the #1 “orchestra conductor” for all Enterprise Clouds</h2>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="knowledge" class="anchor" href="#knowledge" aria-hidden="true"><span class="octicon octicon-link"></span></a>Knowledge</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>One company’s knowledge can be described in terms of</p>
+
+<ul>
+<li>Data (CRM, ERP, Marketing database, HR, custom business apps…)</li>
+<li>Links / flows / integration &gt;&gt; Here comes Skyflow.io</li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="from-external-events-to-enterprise-value" class="anchor" href="#from-external-events-to-enterprise-value" aria-hidden="true"><span class="octicon octicon-link"></span></a>From external events to Enterprise value</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>Enterprise-level companies have dozens of websites, forms, apps, and IoT is adding a new field of services and associated data.</li>
+<li>Skyflow lets centralize the flows, providing a secured - but unauthenticated - entry point to trigger processes and route data to specific Enterprise Clouds.</li>
+</ul>
+
+<h3>
+<a id="flexibility-for-cloud-integrations" class="anchor" href="#flexibility-for-cloud-integrations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Flexibility for Cloud integrations</h3>
+
+<ul>
+<li>Enterprise Clouds need to communicate</li>
+<li>But not replicate all data</li>
+<li>Integration policies are more and more split // knowledge is dispatched</li>
+<li>Skyflow lets unify a central - straightforward way to integrate these Clouds</li>
+<li>Skyflow is “process oriented” (not “data oriented”). Means we focus on the links, not on the destinations. Skyflow can be used as a compute engine for these clouds.</li>
+<li>These links represent an important part of the knowledge, Skyflow lets one company centralize the associated rules &amp; documentations.</li>
+</ul>
+
+<h3>
+<a id="trusted-platform" class="anchor" href="#trusted-platform" aria-hidden="true"><span class="octicon octicon-link"></span></a>Trusted Platform</h3>
+
+<ul>
+<li>OpenSource core platform &amp; framework</li>
+<li>Ecosystem of free or licences addons</li>
+<li>Ecosystem of professional services partners:</li>
+<li>Cloud System Integrators</li>
+<li>Digital Agencies</li>
+<li>Enterprise support</li>
+<li>1 click deploy to Heroku platform (by salesforce.com)</li>
+</ul>
+
+<h3>
+<a id="built-for-both-developers--business" class="anchor" href="#built-for-both-developers--business" aria-hidden="true"><span class="octicon octicon-link"></span></a>Built for both Developers &amp; Business</h3>
+
+<ul>
+<li>Developers: get the flexibility Enterprise Clouds integration needs. They focus on the links, Skyflow to provide the framework for authentications, security, a simple API (external events) and a large library of Enterprise Clouds methods.</li>
+<li>Business: has a global vision of all the flows from an understandable web interface where they find events to flows mapping, flows documentations and rules, and provisionned addons.</li>
+</ul>
       </section>
     </div>
 
