Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
 <a id="knowledge" class="anchor" href="#knowledge" aria-hidden="true"><span class="octicon octicon-link"></span></a>Knowledge</h3>
 
 <ul>
-<li>Corporate knowledge is already secured in terms of Data (CRM, ERP, Marketing databases, HR, custom business apps…)
-*** Skyflow.io allows users to see and maintain the complementary part of your assets: Links and flows.**</li>
+<li>Corporate knowledge is already secured in terms of Data (CRM, ERP, Marketing databases, HR, custom business apps…)</li>
+<li>Skyflow.io allows users to see and maintain the complementary part of your assets: Links and flows.</li>
 </ul>
 
 <h3>
 <a id="from-external-events-to-enterprise-value" class="anchor" href="#from-external-events-to-enterprise-value" aria-hidden="true"><span class="octicon octicon-link"></span></a>From external events to Enterprise value</h3>
 
-<p><em>Transform your websites, forms, apps, and IoT data into business value
-*</em><em>Skyflow lets users centralize flows, providing a secured - yet unauthenticated - entry point to trigger processes and route data to specific Enterprise Clouds.</em>*</p>
+<ul>
+<li>Transform your websites, forms, apps, and IoT data into business value</li>
+<li>Skyflow lets users centralize flows, providing a secured - yet unauthenticated - entry point to trigger processes and route data to specific Enterprise Clouds.</li>
+</ul>
 
 <h3>
 <a id="flexibility-for-cloud-integrations" class="anchor" href="#flexibility-for-cloud-integrations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Flexibility for Cloud integrations</h3>
