Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 <li>Open-Source core platform &amp; framework</li>
 <li>Ecosystem of add-ons &amp; partners</li>
 <li>Enterprise premium support</li>
-<li>1 click deploy to your Heroku platform</li>
+<li>1 click deploy to your Heroku platform
+<img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy Skyflow.io">
+</li>
 </ul>
 
 <h3>
