Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 <li>Open-Source core platform &amp; framework</li>
 <li>Ecosystem of add-ons &amp; partners</li>
 <li>Enterprise premium support</li>
-<li>1 click deploy to your Heroku platform
-<img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy Skyflow.io">
-</li>
+<li>1 click deploy to your Heroku platform</li>
 </ul>
+
+<p><img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy Skyflow.io"></p>
 
 <h3>
 <a id="built-for-both-developers--business" class="anchor" href="#built-for-both-developers--business" aria-hidden="true"><span class="octicon octicon-link"></span></a>Built for both Developers &amp; Business</h3>
