Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
 </ul>
 
 <h2>
-<a id="skyflowio-is-the-maestro-for-all-your-clouds" class="anchor" href="#skyflowio-is-the-maestro-for-all-your-clouds" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skyflow.io is the maestro for all your Clouds</h2>
+<a id="skyflowio-is-the-maestro-for-all-your-clouds" class="anchor" href="#skyflowio-is-the-maestro-for-all-your-clouds" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skyflow.io is the maestro for all your clouds</h2>
 
 <h3>
 <a id="knowledge" class="anchor" href="#knowledge" aria-hidden="true"><span class="octicon octicon-link"></span></a>Knowledge</h3>
 
 <ul>
-<li>Corporate knowledge is already secured in terms of Data (CRM, ERP, Marketing databases, HR, custom business apps…)</li>
-<li>Skyflow.io allows users to see and maintain the complementary part of your assets: Links and flows.</li>
+<li>Corporate knowledge is already secured in terms of data (CRM, ERP, marketing databases, HR, custom business apps…)</li>
+<li>Skyflow.io allows users to see and maintain the complementary part of your assets: links and flows.</li>
 </ul>
 
 <h3>
-<a id="from-external-events-to-enterprise-value" class="anchor" href="#from-external-events-to-enterprise-value" aria-hidden="true"><span class="octicon octicon-link"></span></a>From external events to Enterprise value</h3>
+<a id="from-external-events-to-enterprise-value" class="anchor" href="#from-external-events-to-enterprise-value" aria-hidden="true"><span class="octicon octicon-link"></span></a>From external events to enterprise value</h3>
 
 <ul>
-<li>Transform your websites, forms, apps, and IoT data into business value</li>
-<li>Skyflow lets users centralize flows, providing a secured - yet unauthenticated - entry point to trigger processes and route data to specific Enterprise Clouds.</li>
+<li>Transform your websites, forms, apps, and IoT data into valuable business insights.</li>
+<li>Skyflow lets users centralize flows, providing a secured - yet unauthenticated - entry point to trigger processes and route data to specific enterprise clouds.</li>
 </ul>
 
 <h3>
-<a id="flexibility-for-cloud-integrations" class="anchor" href="#flexibility-for-cloud-integrations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Flexibility for Cloud integrations</h3>
+<a id="flexibility-for-cloud-integration" class="anchor" href="#flexibility-for-cloud-integration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Flexibility for cloud integration</h3>
 
 <ul>
-<li>Make your Clouds communicate - without replicating all data</li>
+<li>Make your clouds communicate - without replicating your data</li>
 <li>Centralize your integration policies</li>
-<li>Unify a central - straightforward way to integrate Clouds</li>
+<li>Unify a central and straightforward way to integrate clouds</li>
 <li>Process oriented - focus on the links, not on the destinations </li>
 <li>Build a compute engine for your clouds</li>
 <li>Centralize your integration process rules &amp; documentation</li>
@@ -69,11 +69,11 @@
 <p><img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy Skyflow.io"></p>
 
 <h3>
-<a id="built-for-both-developers--business" class="anchor" href="#built-for-both-developers--business" aria-hidden="true"><span class="octicon octicon-link"></span></a>Built for both Developers &amp; Business</h3>
+<a id="built-for-both-developers--business-users" class="anchor" href="#built-for-both-developers--business-users" aria-hidden="true"><span class="octicon octicon-link"></span></a>Built for both developers &amp; business users</h3>
 
 <ul>
 <li>Developers: get the flexibility that Enterprise Clouds integration needs. Focus on the links, Skyflow provides the framework for authentications, security, a simple API (external events) and a large library of Enterprise Clouds methods.</li>
-<li>Business: get a global vision of data flows with a user-friendly web interface where you’ll find events to flows mapping, flows documentations and rules, and provisioned add-ons.</li>
+<li>Business Users: get a global vision of data flows with a user-friendly web interface where you’ll find events to flows mapping, documentation, rules, and provisioned add-ons.</li>
 </ul>
 
       <footer class="site-footer">
