Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <li>Structure the connections between external events (web, forms, partners, clients, IoT) and internal “business” clouds</li>
 </ul>
 
-<p><img src="http://skyflow.io/images/skyflow-io%20connects%20your%20clouds.jpg" alt=""></p>
+<p><img src="http://skyflow.io/images/skyflow-io-connects-your-clouds.jpg" alt=""></p>
 
 <h2>
 <a id="skyflowio-is-the-maestro-for-all-your-clouds" class="anchor" href="#skyflowio-is-the-maestro-for-all-your-clouds" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skyflow.io is the maestro for all your clouds</h2>
