Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Skyflow.io : Connect Enterprise Clouds seemlessly">
+    <meta name="description" content="Skyflow.io : Connect Enterprise Clouds seamlessly">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/Sylpheo/skyflow.io">View on GitHub</a>
 
           <h1 id="project_title">Skyflow.io</h1>
-          <h2 id="project_tagline">Connect Enterprise Clouds seemlessly</h2>
+          <h2 id="project_tagline">Connect Enterprise Clouds seamlessly</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Sylpheo/skyflow.io/zipball/master">Download this project as a .zip file</a>
@@ -86,7 +86,7 @@
 <a id="built-for-both-developers--business-users" class="anchor" href="#built-for-both-developers--business-users" aria-hidden="true"><span class="octicon octicon-link"></span></a>Built for both developers &amp; business users</h3>
 
 <ul>
-<li>Developers: get the flexibility that Enterprise Clouds integration needs. Focus on the links, Skyflow provides the framework for authentications, security, a simple API (external events) and a large library of Enterprise Clouds methods.</li>
+<li>Developers: get the flexibility that enterprise clouds integration needs. Focus on the links, Skyflow provides the framework for authentications, security, a simple API (external events) and a large library of enterprise clouds methods.</li>
 <li>Business Users: get a global vision of data flows with a user-friendly web interface where you’ll find events to flows mapping, documentation, rules, and provisioned add-ons.</li>
 </ul>
       </section>
