--- a/setup.html
+++ b/setup.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="http://heroku.github.io/assets/ico/favicon.ico">
 
-    <title>Nibs</title>
+    <title>Skyflow - setup</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://heroku.github.io/nibs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -102,7 +102,7 @@ heroku create
 </div>
 
 
-<script src="./Nibs4_files/jquery.js"></script>
-<script src="./Nibs4_files/bootstrap.min.js"></script>
+<script src="./files/jquery.js"></script>
+<script src="./files/bootstrap.min.js"></script>
 
 </body></html>
