Fix typo "refered as" => "referred to as"

--- a/setup.html
+++ b/setup.html
@@ -57,7 +57,7 @@
 
                 <p><a href="https://heroku.com/deploy?template=https://github.com/sylpheo/skyflow.io"><img src="./files/button.png" alt="Deploy"></a></p>
 
-                <p>Please note your heroku application name, it will be refered as your-app-name in the additional steps below :</p>
+                <p>Please note your heroku application name, it will be referred to as your-app-name in the additional steps below :</p>
 
                 <ol>
                     <li>
@@ -89,7 +89,7 @@ heroku pg:psql -a your-app-name < install.sql</code></pre>
                             <pre><code class="language-text" data-lang="text">cd skyflow.io/
 heroku create</code></pre>
                         </div>
-                        <p>Please note your heroku application name, it will be refered as your-app-name in the instructions below.</p>
+                        <p>Please note your heroku application name, it will be referred to as your-app-name in the instructions below.</p>
                     </li>
                     <li>
                         <p>Install the Postgres plugin</p>
