--- a/setup.html
+++ b/setup.html
@@ -27,13 +27,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./index.html">Skyflow.io</a>
+                <a class="navbar-brand" href="./">Skyflow.io</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="./features.html">Features</a></li>
-                    <li><a href="./architecture.html">Architecture</a></li>
-                    <li><a href="./setup.html">Setup</a></li>
+                    <li><a href="./features">Features</a></li>
+                    <li><a href="./architecture">Architecture</a></li>
+                    <li><a href="./setup">Setup</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
