Unify page titles

--- a/setup.html
+++ b/setup.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="http://heroku.github.io/assets/ico/favicon.ico">
 
-    <title>Skyflow - setup</title>
+    <title>Skyflow.io setup</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://heroku.github.io/nibs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
